Added /:id/cancel /:id/confirmed for bookings endpoint
